fixed overflow of table in ticket overview screens

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Table.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Table.css
@@ -566,6 +566,10 @@ thead .headerSortDown a {
  * @subsection  Ticket List Tables
  */
 
+.TicketList {
+    overflow: auto;
+}
+
 .TicketList table {
     border-collapse: separate;
     position: relative;
